# usa-kabu-jobs

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  env_sample
migrations/2024-02-26-071018_stocks/: up.sql
migrations/2024-03-10-145019_stocks/: down.sql  up.sql
src/: handler.rs  lib.rs  main.rs  schema.rs
src/application/: mod.rs
src/application/dtos/: company_profile.rs  mod.rs  stocks.rs  stocks_dto.rs
src/application/usecase/: create_stocks.rs  mod.rs  stocks_usecase.rs  update_company.rs
src/domain/entities/: company_profile.rs  stocks.rs
src/domain/repositories/: stocks_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs  stocks_repository.rs
src/infrastructure/models/: stocks.rs
src/utils/: strings.rs
