[package]
name = "usa-kabu-jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.17", features = ["full"] }
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
diesel = { version = "2.1.5", features = ["postgres", "chrono", "uuid", "numeric"] }
bigdecimal = "0.4.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.34.3"
postgres = { version = "0.19.7", features = ["with-uuid-1"] }
